# trading

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.agents/scripts/: create-worktree.sh
.claude/: CLAUDE.md  harness-state.json  launch.json  settings.json  sprint-kanban-map.json
.claude/agents/: backend-architect.md  backtest-methodology-agent.md  build-validator.md  code-architect.md  data-engineer-agent.md  execution-ops-agent.md  frontend-developer.md  fullstack-developer.md  fundamental-analyst-agent.md  hub-manager.md  llms-maintainer.md  performance-attribution-agent.md  regime-analyst-agent.md  risk-auditor-agent.md  sentiment-analyst-agent.md  skill-auditor.md  technical-analyst-agent.md  technical-writer.md  trading-orchestrator-lead.md  ui-ux-designer.md  verify-app.md
.claude/commands/: android-expert-review.md  deploy-android.md  deploy-ios.md  (+12 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
cli/: main.py
core/: orchestrator.py
dashboard/: biome.json  next.config.ts  package-lock.json  package.json
docs/: README.md  api-technical-feasibility.md  claude-worktree-setup.md  cli-skill-implementation-plan.md  codex-worktree-setup.md  quantitative-scoring-methodologies.md  skill-conversion-plan.md  skill_chaining_and_self_improvement_research.md  sprint-plan.md  strategy-recommendation.md  trading-methodology-overview.md  verified-methodologies-and-risk-management.md
personal/: DOMAIN.md  __init__.py
src/: bootstrap.py  settings.py
(+953 files in other folders)
